añadido de imagenes

--- a/index.html
+++ b/index.html
@@ -9,9 +9,35 @@
 <body>
     <header class="banner">
         <div class="logo" style="color: white;">destiny</div>
+        <div class="contenido-banner"></div>
+         <div class="texto-banner">
+            <h2 style="color: white;">-Juega a destiny- <br>
+             disfruta de una <br> experiencia unica <br> de hasta 6 jugadores</h2>
+             <div>
         <img src="img/destiny5.jpg" alt=""
         style="width: 400;" height="341" > 
-
+        <p></p>
     </header>
+    <section class="imagenes">
+        <div class="promocional">
+          <img src="img/destiny.webp" alt="">
+          <p></p>
+          <p></p>
+        </div>
+        <div class="imagen2">
+          <img src="img/destiny3.jpg" alt="">
+          <p></p>
+          <p></p>
+        </div>
+        <div class="imagen3">
+          <img src="img/destiny4.jpg" alt="">
+          <p></p>
+          <p></p>
+        </div>
+      </section>
+    
+      <footer class="">
+        <button>Click aca para conocer mas</button>
+      </footer>
 </body>
 </html>
